<resources>
    <string name="app_name">clearTrack</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Already have an account? Login Now</string>
    <string name="register">No account? Register Now</string>
    <string name="email_id">Email id (Optional)</string>
    <string name="pot_name">Name</string>
    <string name="save">Save</string>
    <string name="new_amount">Account balance</string>
    <string name="pots">Accounts</string>
    <string name="pot_picker_title">Select an account</string>
    <string name="reports_title">Reports</string>
    <string name="new_pot">New account</string>
    <string name="no_pot_message">👋 Let\'s start by adding an account💰\n\n Could be anything🤷 \n ✅ your salary account 💰\n  ✅ an asset 🏦 \t\t\t\t \n ✅ your credit card bill 💳 \n\n Anything that you see adding to your net worth 💹</string>
    <string name="no_txn_message">🎉🎉 Good job with adding the first account 👏👏 .\n Now let\'s add it\'s current value 💵.</string>
    <string name="update_cta">Go to play store</string>
    <string name="update_app_message">This version of the app is no longer supported. Please update the app</string>
    <string name="update_app_title">App update required</string>
    <string name="pot_delete_message">Are you sure you want to delete this account? All the transactions in it would be lost.</string>
    <string name="email_policy">For user\'s, privacy we do not collect any personal information including email-id in this app. This email-id would be used for resetting the password. If you are using a password manager, feel free to not provide an email-id here.</string>
    <string name="tnc_label_description">I agree to the Terms and conditions</string>
    <string name="tnc_label">I agree to the</string>
    <string name="tnc">Terms and conditions</string>
    <string name="transaction_value">Transaction value</string>
    <string name="forgot_password"><a href="https://api.getclear.xyz/accounts/password/reset/">Forgot password</a></string>
    <string name="terms_of_user">Terms of use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="button_label">Next</string>
    <string name="one_week_label">1 w</string>
    <string name="One_month_label">1 m</string>
    <string name="three_month_label">3 m</string>
    <string name="six_month_label">6 m</string>
    <string name="one_year_label">1 y</string>
    <string name="max_duration_label">Max</string>
    <string name="three_dots_menu" translatable="false">⋮</string>
    <string name="fetch_error">It\'s not you, it\'s us 🤚 . \n Something has gone wrong 🤦‍, could you please try again? 🙏</string>
    <string name="home">Home</string>
    <string name="reports">Reports</string>
    <string name="accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="move">Move</string>
    <string name="delete_account_dialog_title">Delete an account</string>
    <string name="delete_account_dialog_message">Are you sure you want to delete this account? All the transactions would be lost.</string>
    <string name="cancel_cta">Cancel</string>
    <string name="yes_cta">Yes</string>
    <string name="add_integration">Add Integration</string>
    <string name="edit_account">Edit account</string>
    <string name="share_instructions">Share instructions</string>
    <string name="webhook_instructions">Adding and integration with any service is easy.\n \nSend a HTTP-POST request to the below URL along with the token and amount in the Pot\'s currency</string>
    <string name="webhook_note">Keep the token secure and do not check it into any public repository.</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="show_all">Show All</string>
    <string name="transactions_title">Transactions</string>
    <string name="currencies">Currencies</string>
    <string name="risk_spread">Risk Spread</string>
    <string name="growth">Growth</string>
    <string name="tracked_currencies">Tracked Currencies</string>
</resources>
