<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_transactions_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/txn_add_toolbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:title="@string/pot_picker_title"/>

    <ProgressBar
            android:id="@+id/progressbar"
            android:visibility="gone"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:max="100" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_large"
            android:hint="@string/transaction_value">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_txn_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:imeActionLabel="Next"
                android:inputType="numberSigned"
                android:lines="2"
                android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_large"
            android:hint="@string/new_amount">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pot_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:imeActionLabel="Next"
                android:inputType="numberSigned"
                android:lines="2"
                android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <CalendarView
            android:id="@+id/cal_txn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_normal" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_txn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="@dimen/spacing_large"
            android:text="@string/save" />
</androidx.appcompat.widget.LinearLayoutCompat>