<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_pot_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing_normal"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/new_pot" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_pot_name"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="@dimen/spacing_normal"
        android:hint="@string/pot_name"
        app:layout_constraintEnd_toStartOf="@id/spn_pot_currency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spn_pot_currency"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/spacing_normal"
        android:minHeight="64dp"
        android:popupBackground="?android:popupBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edt_pot_name"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spn_pot_currency"
        style="@style/Widget.MaterialComponents.Chip.Filter"
        android:padding="@dimen/spacing_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spn_pot_currency" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_new_pot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tags"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/spacing_normal"
        android:backgroundTint="?colorPrimary"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>